--- a/lang/en.json
+++ b/lang/en.json
@@ -1,22 +1,22 @@
 {
-	"BOILERPLATE.AptitudeMight": "Might",
-	"BOILERPLATE.AptitudeDeft": "Deftness",
-	"BOILERPLATE.AptitudeGrit": "Grit",
-	"BOILERPLATE.AptitudeInsight": "Insight",
-	"BOILERPLATE.AptitudeAura": "Aura",
+	"BREAK.AptitudeMight": "Might",
+	"BREAK.AptitudeDeft": "Deftness",
+	"BREAK.AptitudeGrit": "Grit",
+	"BREAK.AptitudeInsight": "Insight",
+	"BREAK.AptitudeAura": "Aura",
 
-	"BOILERPLATE.AptitudeMightAbbr": "might",
-	"BOILERPLATE.AptitudeDeftAbbr": "deft",
-	"BOILERPLATE.AptitudeGritAbbr": "grit",
-	"BOILERPLATE.AptitudeInsightAbbr": "insight",
-	"BOILERPLATE.AptitudeAuraAbbr": "aura",
+	"BREAK.AptitudeMightAbbr": "might",
+	"BREAK.AptitudeDeftAbbr": "deft",
+	"BREAK.AptitudeGritAbbr": "grit",
+	"BREAK.AptitudeInsightAbbr": "insight",
+	"BREAK.AptitudeAuraAbbr": "aura",
 
-	"BOILERPLATE.EffectCreate": "Create Effect",
-	"BOILERPLATE.EffectToggle": "Toggle Effect",
-	"BOILERPLATE.EffectEdit": "Edit Effect",
-	"BOILERPLATE.EffectDelete": "Delete Effect",
+	"BREAK.EffectCreate": "Create Effect",
+	"BREAK.EffectToggle": "Toggle Effect",
+	"BREAK.EffectEdit": "Edit Effect",
+	"BREAK.EffectDelete": "Delete Effect",
 
-	"BOILERPLATE.Add": "Add",
-	"BOILERPLATE.Calling": "Calling",
-	"BOILERPLATE.Species": "Species"
+	"BREAK.Add": "Add",
+	"BREAK.Calling": "Calling",
+	"BREAK.Species": "Species"
 }
